@@ -8,6 +8,7 @@ import { displayLoginConfirmation } from './login-confirmation';
 import {
 	getBlocksConfiguration,
 	createPaymentRequestUsingCart,
+	updatePaymentRequestUsingCart,
 } from 'wcstripe/blocks/utils';
 import { getCartDetails } from 'wcstripe/api/blocks';
 
@@ -26,6 +27,9 @@ import { getCartDetails } from 'wcstripe/api/blocks';
 export const usePaymentRequest = ( stripe, needsShipping, billing ) => {
 	const [ paymentRequest, setPaymentRequest ] = useState( null );
 	const [ paymentRequestType, setPaymentRequestType ] = useState( null );
+	const [ isUpdatingPaymentRequest, setIsUpdatingPaymentRequest ] = useState(
+		false
+	);
 
 	// Create a payment request if:
 	//   a) Stripe object is loaded; and
@@ -55,15 +59,28 @@ export const usePaymentRequest = ( stripe, needsShipping, billing ) => {
 			}
 		};
 		createPaymentRequest();
+	}, [ stripe, needsShipping ] );
+
+	useEffect( () => {
+		if ( ! paymentRequest ) {
+			return;
+		}
+
+		const updatePaymentRequest = async () => {
+			setIsUpdatingPaymentRequest( true );
+			const cart = await getCartDetails();
+			updatePaymentRequestUsingCart( paymentRequest, cart );
+			setIsUpdatingPaymentRequest( false );
+		};
+		updatePaymentRequest();
 	}, [
-		stripe,
-		needsShipping,
+		paymentRequest,
 		billing.cartTotal,
 		billing.cartTotalItems,
 		billing.currency.code,
 	] );
 
-	return [ paymentRequest, paymentRequestType ];
+	return [ paymentRequest, paymentRequestType, isUpdatingPaymentRequest ];
 };
 
 /**
